FILE(GLOB SRC
	*.cpp
	${LIBAPPLICATIONS_TYPE}/*.cpp)
FILE(GLOB HEADERS
	*.h
	*.inl
	${LIBAPPLICATIONS_TYPE}/*.h
	${LIBAPPLICATIONS_TYPE}/*.inl)

INCLUDE_DIRECTORIES(${CORE_INCLUDES}
	${MATHEMATICS_INCLUDES}
	${IMAGICS_INCLUDES}
	${PHYSICS_INCLUDES}
	${GRAPHICS_INCLUDES}
	${APPLICATIONS_INCLUDES})

MESSAGE ("Application type: ${LIBAPPLICATIONS_TYPE}")

ADD_LIBRARY (Wm5Applications SHARED ${SRC})
TARGET_LINK_LIBRARIES (Wm5Applications X11)
