FILE(GLOB SRC
	*.cpp
	${LIBAPPLICATIONS_TYPE}/*.cpp)
FILE(GLOB HEADERS
	*.h
	*.inl
	${LIBAPPLICATIONS_TYPE}/*.h
	${LIBAPPLICATIONS_TYPE}/*.inl)

IF (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	ADD_DEFINITIONS (-DWM5_APPLICATIONS_DLL_EXPORT=1)
ENDIF ()

INCLUDE_DIRECTORIES(${CORE_INCLUDES}
	${MATHEMATICS_INCLUDES}
	${IMAGICS_INCLUDES}
	${PHYSICS_INCLUDES}
	${GRAPHICS_INCLUDES}
	${APPLICATIONS_INCLUDES})

MESSAGE ("Application type: ${LIBAPPLICATIONS_TYPE}")

IF (LIBGRAPHICS_RENDERER STREQUAL "OpenGLRenderer")
	ADD_DEFINITIONS (-DWM5_USE_OPENGL=1)
ENDIF ()

IF (LIBGRAPHICS_RENDERER STREQUAL "Dx9Renderer")
	ADD_DEFINITIONS (-DWM5_USE_DX9=1)
ENDIF ()

ADD_LIBRARY (Wm5Applications STATIC ${SRC} ${HEADERS})
IF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	TARGET_LINK_LIBRARIES (Wm5Applications X11)
ENDIF ()
