FILE(GLOB SRC */*.cpp)
FILE(GLOB HEADERS */*.h */*.inl *.h *.inl)

IF (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	ADD_DEFINITIONS (-DWM5_IMAGICS_DLL_EXPORT=1)
ENDIF ()

INCLUDE_DIRECTORIES(${CORE_INCLUDES} ${MATHEMATICS_INCLUDES} ${IMAGICS_INCLUDES})

ADD_LIBRARY (Wm5Imagics SHARED ${SRC} ${HEADERS})
TARGET_LINK_LIBRARIES (Wm5Imagics Wm5Core Wm5Mathematics)