FILE(GLOB SRC */*.cpp)
FILE(GLOB HEADERS */*.h */*.inl *.h *.inl)

INCLUDE_DIRECTORIES(${CORE_INCLUDES} ${MATHEMATICS_INCLUDES})

add_library(Wm5Mathematics SHARED ${SRC})

INSTALL(TARGETS Wm5Mathematics
        DESTINATION lib
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)

INSTALL(FILES ${HEADERS}
        DESTINATION include/Wm5
        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
       
