FILE(GLOB SRC */*.cpp)
FILE(GLOB HEADERS */*.h */*.inl *.h *.inl)

IF (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	ADD_DEFINITIONS (-DWM5_PHYSICS_DLL_EXPORT=1)
ENDIF ()

INCLUDE_DIRECTORIES(${CORE_INCLUDES} ${MATHEMATICS_INCLUDES} ${PHYSICS_INCLUDES})

ADD_LIBRARY (Wm5Physics SHARED ${SRC} ${HEADERS})
TARGET_LINK_LIBRARIES (Wm5Physics Wm5Core Wm5Mathematics)